auth middleware added
